Added POS backend with JWT auth, roles, and reports (daily, monthly, top products)